Make overflow be auto on panels, fixes Windows issue

--- a/app/styles/components/_character-count.scss
+++ b/app/styles/components/_character-count.scss
@@ -7,7 +7,7 @@
 
 .panel {
   height: calc(100% - #{$tab-height});
-  overflow: scroll;
+  overflow: auto;
   &--status {
     height: calc(100% - #{$tab-height} - #{$status-height});
   }
